--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,10 @@ body {
   text-align: center;
 }
 
+.app-title {
+  margin-top: 75px;
+  margin-bottom: 50px;
+  font-size: 90px;
+  color:rgb(29, 203, 203);
+  font-family: Bigelow Rules;
+}
